# Geant4Reweight

./: CMakeLists.txt  CMakePresets.json  README.md  dataset.csv  total_dataset.csv
FitterBase/: Al_experiments.fcl  CMakeLists.txt  C_experiments.fcl  Cu_experiments.fcl  Fe_experiments.fcl  FindMinimum.py  FindMinium.py  Fitter.cc  O_experiments.fcl  Pb_experiments.fcl  alt_curve.fcl  alt_curve_parameters.fcl  binning.fcl  curve.fcl  curveFitter.cc  curve_parameters.fcl  curve_sets.fcl  draw.py  draw_all.py  draw_all_experiments.py  draw_experiments.py  fake_updated_fit.xml  fit.xml  more_samples.fcl  newFitter.cc  new_fit.xml  parMaker.cc  parameters.fcl  reweight_handler.xml  samples.fcl  sets.fcl  try.fcl  updated_fit.xml
FitterBase/FCL/: Al_experiments.fcl  C_experiments.fcl  Fake_experiments.fcl  Fe_experiments.fcl  O_experiments.fcl  Pb_experiments.fcl  example.fcl  sets.fcl
FitterBase/include/: BinonFitter.hh  DUETFitter.hh  FitParameter.hh  FitSample.hh  G4ReweightCurveFitManager.hh  G4ReweightFitManager.hh  G4ReweightFitter.hh  G4ReweightHandler.hh  G4ReweightParameterMaker.hh  newDUETFitter.hh
FitterBase/src/: BinonFitter.cc  DUETFitter.cc  G4ReweightCurveFitManager.cc  G4ReweightFitManager.cc  G4ReweightFitter.cc  G4ReweightHandler.cc  G4ReweightParameterMaker.cc  newDUETFitter.cc
G4PiCascade/: CMakeLists.txt  G4CrossSection.cc  G4PiCascade.cc  cascade.fcl  cascade_material.fcl  cross_section.fcl  draw.py  draw_exclusive.py  exclusive_xsec.py  stitch_results.py
G4PiCascade/include/: G4PiCascadePhysicsList.hh
G4PiCascade/src/: G4PiCascadeDetectorConstruction.cc  G4PiCascadePhysicsList.cc
G4Sim/: CMakeLists.txt  G4Engine.cc  G4Sim.cc  cut_nom.mac  cut_var.mac  inel_bias.csv  nom_points.mac  nom_try.mac  nominal.mac  run1.mac
G4Sim/include/: G4SimActionInitialization.hh  G4SimEventAction.hh  G4SimPhysicsList.hh  G4SimSteppingAction.hh  G4SimTrackingAction.hh  StepTreeBuffer.hh  ThinCDetector.hh  ThinFeDetector.hh  TrackTreeBuffer.hh  TreeBuffer.hh
G4Sim/macros/: 200MeV.mac  400MeV.mac  500MeV.mac  600MeV.mac  800MeV.mac  gps_nom_0.mac  gps_nom_1.mac  gps_nom_2.mac  gps_nom_3.mac  gps_nom_4.mac  gps_var_0.mac  gps_var_1.mac  gps_var_2.mac  gps_var_3.mac  gps_var_4.mac  mac_base.txt  make_points.py
G4Sim/src/: CarbonBox.cc  G4SimActionInitialization.cc  G4SimDetectorConstruction.cc  G4SimEventAction.cc  G4SimPhysicsList.cc  G4SimPrimaryGeneratorAction.cc  G4SimSteppingAction.cc  G4SimTrackingAction.cc  ThinDetector.cc  ThinODetector.cc
PropBase/: CMakeLists.txt
PropBase/include/: G4ReweightThrowManager.hh
PropBase/src/: G4ReweightParameterMaker.cc  G4ReweightThrowManager.cc
ReweightBase/: CMakeLists.txt  G4Reweight.cc  G4ThrowReweight.cc  LAr.xml  draw_comp.py  draw_default_xsec.py  draw_elast_dists.py  draw_nelast.py  draw_prob.py  draw_slice_xsec.py  draw_thin_xsec.py  draw_xsec.py  new.xml  throw_rw.fcl
ReweightBase/include/: G4ReweightFinalState.hh  G4ReweightInter.hh  G4ReweightStep.hh  G4ReweightTraj.hh  G4ReweightTreeParser.hh
ReweightBase/src/: G4ReweightFinalState.cc  G4ReweightInter.cc  G4ReweightStep.cc  G4ReweightTraj.cc  G4ReweightTreeParser.cc
app/FitterBase/: CMakeLists.txt  Fitter.cc
app/G4Sim/: CMakeLists.txt  G4Sim.cc  G4Thin.cc  G4ThinAl.cc  G4ThinC.cc  G4ThinCu.cc  G4ThinFe.cc  G4ThinO.cc  G4ThinPb.cc  G4WatAr.cc
app/PredictionBase/: CMakeLists.txt  G4CrossSection.cc  G4PiCascade.cc
app/PropBase/: CMakeLists.txt  parMaker.cc
app/ReweightBase/: CMakeLists.txt  FlatTreeProcessor.cc  G4Reweight.cc  G4ThrowReweight.cc
geant4reweight/: CMakeLists.txt  old_cmake.txt
geant4reweight/FitterBase/: DUETFitter.hh  FitParameter.hh  G4ReweightFitManager.cc  G4ReweightFitManager.hh  G4ReweightFitter.cc  G4ReweightFitter.hh  G4ReweightPionFitManager.cc  G4ReweightPionFitManager.hh  g4rw_C_experiments.fcl  g4rw_Cu_experiments.fcl  g4rw_Fake_experiments.fcl  g4rw_O_experiments.fcl  g4rw_parameters.fcl
geant4reweight/PredictionBase/: CMakeLists.txt  G4CascadeDetectorConstruction.cc  G4CascadeDetectorConstruction.hh  G4CascadePhysicsList.cc  G4DecayHook.cc
geant4reweight/PropBase/: CMakeLists.txt  G4ReweightParameterMaker.cc  G4ReweightParameterMaker.hh  G4ReweightThrowManager.cc  G4ReweightThrowManager.hh
geant4reweight/ReweightBase/: CMakeLists.txt  G4DifferentialReweighter.cc  G4DifferentialReweighter.hh  G4KMinusReweighter.cc  G4KMinusReweighter.hh  G4KPlusReweighter.cc  G4KPlusReweighter.hh  G4MultiReweighter.cc  G4MultiReweighter.hh  G4NeutronReweighter.cc  G4NeutronReweighter.hh  G4PiMinusReweighter.cc  G4PiMinusReweighter.hh  G4PiPlusReweighter.cc  G4PiPlusReweighter.hh  G4ProtonReweighter.cc  G4ProtonReweighter.hh  G4ReweightManager.cc  G4ReweightManager.hh  G4ReweightPar.hh  G4ReweightStep.cc  G4ReweightStep.hh  G4ReweightSuite.cc  G4ReweightSuite.hh  G4ReweightTraj.cc  G4ReweightTraj.hh  G4ReweightTreeParser.cc  G4ReweightUtilities.cc  G4ReweightUtilities.hh  G4ReweightVarMap.cc  G4ReweightVarMap.hh  G4Reweighter.cc  G4Reweighter.hh  G4ReweighterFactory.cc  G4ReweighterFactory.hh
geant4reweight/app/: CMakeLists.txt
geant4reweight/data/: Make_Altman.C  Make_Caroll.C  Make_Clough.C  Make_Falomkin.C  Make_Falomkin2.C  Make_Grater.C  Make_Kinney.C  Make_Leitch.C  check_points.py  make_Ashery_2173.py  make_Bellotti.py  make_Bowles.py  make_DUET.py  make_Levenson.py  make_Meirav.py
geant4reweight/docs/: GeantReweight.tex
geant4reweight/scripts/: CMakeLists.txt
geant4reweight/src/: CMakeLists.txt
src/: CMakeLists.txt
src/FitterBase/: CMakeLists.txt  G4ReweightFitManager.cc  G4ReweightFitManager.hh  G4ReweightFitter.cc  G4ReweightFitter.hh
src/G4Sim/: CMakeLists.txt  G4SimActionInitialization.cc  G4SimDetectorConstruction.hh  G4SimPhysicsList.hh  G4SimPrimaryGeneratorAction.hh  G4SimSteppingAction.cc  ThinAlDetector.cc  ThinAlDetector.hh  ThinCDetector.cc  ThinCuDetector.cc  ThinCuDetector.hh  ThinDetector.cc  ThinDetector.hh  ThinFeDetector.cc  ThinODetector.hh  ThinPbDetector.cc  ThinPbDetector.hh  WatArDetector.cc
src/PredictionBase/: CMakeLists.txt  exclusive_xsec.py
src/PropBase/: CMakeLists.txt  (+2 more)
(+677 files in other folders)
