#LIST(APPEND INCDIRS ${CMAKE_CURRENT_SOURCE_DIR}/util)
#LIST(APPEND INCDIRS ${CMAKE_CURRENT_SOURCE_DIR}/G4Sim)
#LIST(APPEND INCDIRS ${CMAKE_CURRENT_SOURCE_DIR}/PredictionBase)
#LIST(APPEND INCDIRS ${CMAKE_CURRENT_SOURCE_DIR}/PropBase)
#LIST(APPEND INCDIRS ${CMAKE_CURRENT_SOURCE_DIR}/ReweightBase)
#LIST(APPEND INCDIRS ${CMAKE_CURRENT_SOURCE_DIR}/FitterBase)

#add_subdirectory(G4Sim)
add_subdirectory(PredictionBase)
add_subdirectory(PropBase)
add_subdirectory(ReweightBase)
add_subdirectory(FitterBase)

#SET(LOCAL_INCDIRS ${INCDIRS})
#SET(INCDIRS ${LOCAL_INCDIRS} PARENT_SCOPE)
#
#SET(LOCAL_MODULETargets ${MODULETargets})
#LIST(REVERSE LOCAL_MODULETargets)
#SET(MODULETargets ${LOCAL_MODULETargets} PARENT_SCOPE)
